[package]
name = "btc-inspect"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"
num = "0.4.3"
sha2 = "0.10.9"
rfc6979 = "0.4.0"
hex = "0.4.3"
ripemd = "0.1.3"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
dotenv = "0.15.0"
sha1 = "0.10.6"
chrono = "0.4.40"
serde_json = "1.0.140"
log = "0.4.27"
wasm-log = "0.3.1"
lazy_static = "1.5.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
